[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-cli-deb"
version = "0.1.0.dev"
description = "Command line interface to talk to pulpcore's REST API. (Deb plugin commands)"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPLv2+"}
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-cli>=0.18.2,<0.24.0.dev",
  "pulp-glue-deb==0.1.0.dev",
]

[project.urls]
repository = "https://github.com/pulp/pulp-cli-deb"
changelog = "https://github.com/pulp/pulp-cli-deb/blob/main/CHANGES.md"

[project.entry-points."pulp_cli.plugins"]
deb = "pulpcore.cli.deb"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulpcore.cli.*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed", "locale/*/LC_MESSAGES/*.mo"]

[tool.pulp_cli_template]
app_label = "deb"
glue = true
docs = false
translations = true
test_matrix = """
- python: "3.9"
  image_tag: "nightly"
  pulp_api_root: "/relocated/djnd/"
- python: "3.6"
  image_tag: "3.21"
- python: "3.7"
  image_tag: "3.20"
  lower_bounds: true
- python: "3.8"
  image_tag: "3.19"
- python: "3.11"
  image_tag: "3.18"
- python: "3.10"
  image_tag: "3.22"
  lower_bounds: true
"""

[tool.towncrier]
filename = "CHANGES.md"
directory = "CHANGES/"
title_format = "## {version} ({project_date})"
template = "CHANGES/.TEMPLATE.md"
issue_format = "[#{issue}](https://github.com/pulp/pulp-cli-deb/issues/{issue})"
start_string = "[//]: # (towncrier release notes start)\n"
underlines = ["", "", ""]

[[tool.towncrier.section]]
path = ""
name = ""

[[tool.towncrier.section]]
path = "pulp-glue-deb"
name = "Pulp GLUE deb"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "translation"
name = "Translations"
showcontent = true

[[tool.towncrier.type]]
directory = "devel"
name = "Developer Notes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
markers = [
  "script: tests provided as shell scripts",
  "help_page: tests that render help pages",
  "pulp_deb: pulp_deb tests",
]

[tool.mypy]
strict = true
show_error_codes = true
files = "pulpcore/**/*.py"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "click_shell.*",
  "schema.*",
]
ignore_missing_imports = true
