[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-glue-deb"
version = "0.0.7.dev"
description = "Version agnostic glue library to talk to pulpcore's REST API. (deb plugin)"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPLv2+"}
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-glue>=0.18.2,<0.24.0.dev",
]

[project.urls]
repository = "https://github.com/pulp/pulp-cli-deb"
changelog = "https://github.com/pulp/pulp-cli-deb/blob/main/CHANGES.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulp_glue.*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed", "locale/*/LC_MESSAGES/*.mo"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
strict = true
show_error_codes = true
files = "pulp_glue/**/*.py"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "schema.*",
]
ignore_missing_imports = true
